--- a/_includes/out.html
+++ b/_includes/out.html
@@ -1,3 +1,1 @@
-<div class="img-container">
-<img src="{{site.baseurl}}/{{ page.path | replace:'index.md','' }}/out.png" alt="">
-</div>
+<div class="img-container"><img src="{{site.baseurl}}/{{ page.path | replace:'index.md','' }}/out.png" alt=""></div>
