--- a/_includes/overview.html
+++ b/_includes/overview.html
@@ -1,35 +1,19 @@
 <div id="blocks">
-{% for page in site.pages %}
-{% if page.meta == nil %}
-{% for tag in page.tags %}
-{% if tag == include.param %}
-<div class="block{% for t in page.tags  %}{% if t != include.param %} {{ t | downcase | replace: '.','' | replace: ' ','-'| replace:'ä','ae' | replace:'ö','oe'| replace:'ü','ue'| replace:'ß','ss' }}{% endif %}{% endfor %}">
+{% for page in site.pages %}{% if page.meta == nil %}{% for tag in page.tags %}{% if tag == include.param %}<div class="block{% for t in page.tags  %}{% if t != include.param %} {{ t | downcase | replace: '.','' | replace: ' ','-'| replace:'ä','ae' | replace:'ö','oe'| replace:'ü','ue'| replace:'ß','ss' }}{% endif %}{% endfor %}">
 <div class="thumb">
 <a href="{{ page.permalink | prepend: site.baseurl }}"><img src="{{site.baseurl}}/{{ page.path | replace:'index.md','' }}thumb.png"></a>
 </div>
 <div class="block-info">
-
 <h3>{{page.title}}</h3>
-<div class="block-page-tags font_small">{% include icon-tags.html %}
-    {% for t in page.tags  %}
-    {% if t != include.param %}
-    <span><a href="#">{{t}}</a></span>{% unless forloop.last %}, {% endunless %}
-    {% endif %}
-    {% endfor %}
+  <div class="block-page-tags font_small">{% include icon-tags.html %}
+    {% for t in page.tags  %}{% if t != include.param %}
+    <span><a href="#">{{t}}</a></span>{% unless forloop.last %}, {% endunless %}{% endif %}{% endfor %}
+    </div>
 </div>
-</div>
-
-
-{% if page.summary %}
-<div class="summary">
+{% if page.summary %}<div class="summary">
     <p>{{ page.summary }} <a href="{{ page.permalink | prepend: site.baseurl }}"><span class="summary-link">{% include icon-link.html %}</span></a></p>
 </div>
-</div>
-{% endif %}
-{% endif %}
-{% endfor %}
-{% endif %}
-{% endfor %}
+</div>{% endif %}{% endif %}{% endfor %}{% endif %}{% endfor %}
 </div>
 <div class="clear-float"></div>
 <script type="text/javascript" src="{{site.baseurl}}/assets/js/jquery.min.js"></script>
