--- a/_includes/overview.html
+++ b/_includes/overview.html
@@ -6,8 +6,8 @@
 <div class="block-info">
 <h3>{{page.title}}</h3>
   <div class="block-page-tags font_small">{% include icon-tags.html %}
-    {% for t in page.tags  %}{% if t != include.param %}
-    <span><a href="#">{{t}}</a></span>{% unless forloop.last %}, {% endunless %}{% endif %}{% endfor %}
+    {% for t in page.tags  %}
+    <span><a href="#">{{t}}</a></span>{% unless forloop.last %}, {% endunless %}{% endfor %}
     </div>
 </div>
 {% if page.summary %}<div class="summary">
