--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,12 @@
   </div>{% endif %}
   <h1 id="title">{{page.title}}</h1>
   <div class="clear-float"></div>
+  {% if page.tags != nil %}
+  <div class="page-tags font_small">{% include icon-tags.html %}
+    {% for t in page.tags  %}
+    <span><a href="#">{{t}}</a></span>{% unless forloop.last %}, {% endunless %}{% endfor %}
+    </div>
+  {% endif %}
       </div>
     </section>
     <section>
