--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,8 +5,15 @@ meta: True
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-    box-sizing: border-box;}
+    box-sizing: border-box;
+}
 @import 'mixins', 'colors', 'fonts', 'typescale','syntax', 'menu', 'blocks','link-icon';
+
+html {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+}
 
 body {
 
