working on projects display

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,6 @@
 <script type="text/javascript" src="{{site.baseurl}}/assets/js/jquery.min.js"></script>
 <script type="text/javascript" src="{{site.baseurl}}/assets/js/main.js"></script>
+{% if page.type == 'project' %}
+<script type="text/javascript" src="{{site.baseurl}}/assets/js/project.js"></script>
+{%endif%}
+
