--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -207,6 +207,13 @@ p {
   clear: both ;
 }
 
+// --------- projects -------------
+//
+.project img {
+  max-width: 100%;
+  height: auto;
+
+}
 // ------------- p5js -------------
 
 #sketch{
