--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -16,13 +16,13 @@
   <div class="clear-float"></div>
   {% if page.tags != nil %}
   <div class="page-tags font_small">{% include icon-tags.html %}{% for t in page.tags %}<span> {{t}}</span>{% unless forloop.last %}, {% endunless %}{% endfor %}</div>{% endif %}
-    {% if page.author != nil %}
-      <div class="author font_small">{% include icon-pencil.html %}<span> {% if page.author-url !=nil %}<a href="{{page.author-url}}">{% endif %}{{ page.author }}{% if page.author-url !=nil %}</a>{% endif %}</span></div>
+    {% if page.authors != nil %}
+      <div class="author font_small">{% include icon-pencil.html %}<span> {% if page.authors-url !=nil %}<a href="{{page.authors-url}}">{% endif %}{{ page.authors }}{% if page.authors-url !=nil %}</a>{% endif %}</span></div>
     {% endif %}
       </div>
     </section>
     <section>
-      <div id="main">
+      <div id="main" class="project">
         {{content}}
       </div>
     </section>
