--- a/_includes/overview-projects.html
+++ b/_includes/overview-projects.html
@@ -3,7 +3,7 @@
 {% if page.type == 'project' %}
 <div class="block">
 <div class="thumb">
-<a href="{{ page.permalink | prepend: site.baseurl }}"><img src="{{site.baseurl}}/{{ page.path | replace:'index.md','' }}thumb.png"></a>
+<a href="{{ page.url | prepend: site.baseurl }}"><img src="{{site.baseurl}}/{{ page.path | replace:'index.md','' }}thumb.png"></a>
 </div>
 
 
