--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,11 +15,10 @@
   <h1 id="title">{{page.title}}</h1>
   <div class="clear-float"></div>
   {% if page.tags != nil %}
-  <div class="page-tags font_small">{% include icon-tags.html %}{% for t in page.tags %}<span> {{t}}</span>{% unless forloop.last %}, {% endunless %}{% endfor %}</div>{% endif %}
-    {% if page.authors != nil %}
-      <div class="author font_small">{% include icon-pencil.html %}<span> {% if page.authors-url !=nil %}<a href="{{page.authors-url}}">{% endif %}{{ page.authors }}{% if page.authors-url !=nil %}</a>{% endif %}</span></div>
-    {% endif %}
-      </div>
+  <div class="page-tags font_small">{% include icon-tags.html %}{% for t in page.tags %}<span> {{t}}</span>{% unless forloop.last %}, {% endunless %}{% endfor %}</div>
+  {% endif %}
+  <div class="author font_small">{% include icon-pencil.html %}{% for author in page.authors %}{% assign url = page.authors-url[forloop.index0] %}<span><a href="{{url}}">{{ author }}</a></span>{%unless forloop.last%}, {%endunless%}{% endfor %}</div>
+      </div> <!-- close subheader -->
     </section>
     <section>
       <div id="main" class="project">
