checking broken links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <div class="inner">
 
   <nav>
-    <a href="{{ site.baseurl }}" class="logo"></a>
+    <a href="{{ site.baseurl }}/" class="logo"></a>
       <input type="checkbox" id="nav" />
       <label for="nav"></label>
   <a href="#" id="menu-icon"></a>
